添加重启设备代码，待测试